# avd-gujcet-portal

./: CLAUDE.md  README.md  planning.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  README.md  build_linux_package.py  package.json  pyproject.toml  requirements.txt  serverless.yml
backend/app/: config.py  dependencies.py  logger.py  main.py
backend/app/models/: event.py  helpdesk.py  hpcl.py  registration.py  user.py
backend/app/routers/: admin.py  auth.py  events.py  helpdesk.py  hpcl.py  registrations.py  users.py
backend/app/services/: dynamo.py  email_service.py  google_auth_service.py  id_generator.py  pdf_service.py  s3_service.py  twilio_service.py
backend/app/utils/: jwt.py  otp.py  validators.py
backend/scripts/: docker-local-setup.md  gsi.json
backend/tests/: test_auth.py  test_validators.py
backend/tmp_linux_wheels/: boto3-1.34.34-py3-none-any.whl  chardet-7.1.0-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  google_auth-2.28.2-py2.py3-none-any.whl  httptools-0.7.1-cp312-cp312-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  mangum-0.17.0-py3-none-any.whl  pydantic_core-2.16.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  twilio-9.0.0-py2.py3-none-any.whl  watchfiles-1.1.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  websockets-16.0-cp312-cp312-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
(+113 files in other folders)
